--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section id="about" class="section">
         <h2>About Me</h2>
-        <p>I'm a passionate Computer Science Engineering student with a love for problem-solving and building intuitive digital experiences. I specialize in web development and am always learning new technologies. When I'm not coding, you can find me...</p>
+        <p>Driven by a passion to build things that matter, I'm a computer science student with a creative mind and a web developer's toolkit. My goal is to craft digital experiences that are not only powerful but also a joy to use. I'm always chasing the next big idea and the technology that can bring it to life.</p>
     </section>
     <section id="education" class="section">
         <h2>Education</h2>
@@ -86,4 +86,5 @@
 </body>
 
 </html>
+
 
