--- a/index.html
+++ b/index.html
@@ -1,90 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aashitha Prabhu B | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aashitha Prabhu B | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <header>
-        <nav>
-            <div class="logo">AASHITHA PRABHU B</div>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <nav>
+      <div class="logo">AASHITHA PRABHU B</div>
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Hey, I'm a CS Engineer!🚀</h1>
-            <p>I build cool stuff for the web. Let's create something awesome together.</p>
-            <a href="#contact" class="cta-button">Get in Touch</a>
-        </div>
-        <div class="hero-image">
-            <img src="your-photo.jpg" alt="Your Profile Picture">
-        </div>
-    </section>
-
-    <section id="about" class="section">
-        <h2>About Me</h2>
-        <p>Driven by a passion to build things that matter, I'm a computer science student with a creative mind and a web developer's toolkit. My goal is to craft digital experiences that are not only powerful but also a joy to use. I'm always chasing the next big idea and the technology that can bring it to life.</p>
-    </section>
-    <section id="education" class="section">
-        <h2>Education</h2>
-        <ul>
-            <li><strong>Bachelor of Engineering in Computer Science - </strong>  Vivekananda College of Engineering & Technology (2023-27)</li>
-            <li><strong>Pre University (PCMC) - </strong> Ambika Pre University College (2021-23) </li>
-        </ul>
-    </section>
-    <section id="projects" class="section">
-        <h2>My Projects</h2>
-        <div class="project-grid">
-            <div class="project-card">
-                <h3>SiteSense</h3>
-                <p>Unified and actionable view of overall website health.</p>
-                <a href="#">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>link-it</h3>
-                <p>A site to create shorten & customized links.</p>
-                <a href="#">View Project</a>
-            </div>
-            <div class="project-card">
-                <h3>To-Do list</h3>
-                <p>Stay on top of your tasks effortlessly.</p>
-                <a href="#">View Project</a>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact" class="section">
-        <h2>Let's Connect!</h2>
-        <p>Feel free to reach out to me via email or connect with me on social media.</p>
-        <div class="social-links">
-            <a href="mailto:prabhuaashitha@gmail.com">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg" alt="Gmail" style="width:20px; vertical-align:middle; margin-right:5px; filter: invert(1);">
-                prabhuaashitha@gmail.com
-            </a>
-            | <a href="https://linkedin.com/in/aashithaprabhub" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/linkedin.svg" alt="LinkedIn" style="width:20px; vertical-align:middle; margin-right:5px; filter: invert(1);">
-                linkedin.com/in/aashithaprabhub
-            </a></a>
-            | <a href="https://github.com/aashitha20" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" style="width:20px; vertical-align:middle; margin-right:5px; filter: invert(1);">
-                github.com/aashitha20
-            </a></a>
-        </div>
-    </section>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Hey, I'm a CS Engineer!🚀</h1>
+      <p>I build cool stuff for the web. Let's create something awesome together.</p>
+      <a href="contact.html" class="cta-button">Get in Touch</a>
+    </div>
+    <div class="hero-image">
+      <img src="your-photo.jpg" alt="Your Profile Picture">
+    </div>
+  </section>
 
 </body>
-
 </html>
-
-
