--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
       <div class="logo">AASHITHA PRABHU B</div>
       <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="education.html">Education</a></li>
@@ -35,3 +36,4 @@
 
 </body>
 </html>
+
