--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
       <div class="logo">AASHITHA PRABHU B</div>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="projects.html">Projects</a></li>
@@ -47,3 +48,4 @@
 
 </body>
 </html>
+
