--- a/education.html
+++ b/education.html
@@ -15,6 +15,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="skills.html">Skills</a></li>
+        <li><a href="education.html">Education</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -31,3 +32,4 @@
 
 </body>
 </html>
+
