--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="education.html">Education</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -44,3 +45,4 @@
 
 </body>
 </html>
+
