--- a/skills.html
+++ b/skills.html
@@ -12,9 +12,10 @@
   <header>
     <nav>
       <div class="logo">AASHITHA PRABHU B</div>
-      <ul>
+     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="skills.html">Skills</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -39,3 +40,4 @@
 
 </body>
 </html>
+
